--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,27 @@
 
     <artifactId>rheem-graphchi</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.graphchi</groupId>
+            <artifactId>graphchi-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.qcri.rheem</groupId>
+            <artifactId>rheem-core</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.qcri.rheem</groupId>
+            <artifactId>rheem-basic</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
