chore(rheem): fix Maven build
* go back to Hadoop 2.2.0, which is enforced by Spark (at least for tests)
* use hadoop-client instead of hadoop-common (more general, avoid dependency conflicts)
* remove mortbay dependency from rheem-graphchi
* exclude GraphChi's Hadoop dependency

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.graphchi</groupId>
-            <artifactId>graphchi-java_2.11</artifactId>
-            <version>0.2.2</version>
+            <artifactId>graphchi-java_2.10</artifactId>
         </dependency>
 
         <dependency>
@@ -30,7 +29,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
+            <artifactId>hadoop-client</artifactId>
         </dependency>
     </dependencies>
 
