chore(rheem): make Scala version flexible (default 2.10)
* also try to enforce consistent Scala version throughout project

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.graphchi</groupId>
-            <artifactId>graphchi-java_2.10</artifactId>
+            <artifactId>graphchi-java_${scala.compat.version}</artifactId>
         </dependency>
 
         <dependency>
