perf(rheem-graphchi): refactor GraphChiPageRankOperator
* provide results as stream rather than as file
* make sure to operate on Long as vertex IDs

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.qcri.rheem</groupId>
+            <artifactId>rheem-java</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
         </dependency>
@@ -36,6 +41,5 @@
             <artifactId>hadoop-hdfs</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
