feat(rheem-core,rheem-platforms): integrate TimeToCostConverter into infrastructure
* the Configuration assigns such an TimeToCostConverter to each Platform
* this is a preparatory step for basing the estimation on arbitrary costs

--- a/src/main/resources/rheem-graphchi-defaults.properties
+++ b/src/main/resources/rheem-graphchi-defaults.properties
@@ -1,3 +1,5 @@
 rheem.graphchi.cpu.mhz = 2700
 rheem.graphchi.cores = 2
 rheem.graphchi.hdfs.ms-per-mb = 2.7
+rheem.graphchi.costs.fix = 0.0
+rheem.graphchi.costs.per-ms = 1.0
