--- a/src/main/resources/rheem-graphchi-defaults.properties
+++ b/src/main/resources/rheem-graphchi-defaults.properties
@@ -3,3 +3,46 @@ rheem.graphchi.cores = 2
 rheem.graphchi.hdfs.ms-per-mb = 2.7
 rheem.graphchi.costs.fix = 0.0
 rheem.graphchi.costs.per-ms = 1.0
+
+rheem.graphchi.pagerank.load.main.template = {\
+ "type":"mathex",\
+ "in":1,\
+ "out":1,\
+ "cpu":"?*in0 + ?*out0 + ?}",\
+ "ram":"0",\
+ "disk":"0",\
+ "net":"0",\
+ "p":0.9\
+}
+rheem.graphchi.pagerank.load.main = {\
+"type":"mathex",\
+"in":1,\
+"out":1,\
+"cpu":"521.029270294375*in0 + 2663.526789785403*out0 + 1.2775981739537635E8",\
+"ram":"0",\
+"disk":"0",\
+"net":"0",\
+"p":0.9\
+}
+
+
+rheem.graphchi.pagerank.load.output.template = {\
+ "type":"mathex",\
+ "in":1,\
+ "out":1,\
+ "cpu":"?*out0 + ?",\
+ "ram":"0",\
+ "disk":"0",\
+ "net":"0",\
+ "p":0.9\
+}
+rheem.graphchi.pagerank.load.output = {\
+ "type":"mathex",\
+ "in":1,\
+ "out":1,\
+ "cpu":"100*out0 + 10",\
+ "ram":"0",\
+ "disk":"0",\
+ "net":"0",\
+ "p":0.9\
+}
