fix(rheem-graphchi): fix cost function template

--- a/src/main/resources/rheem-graphchi-defaults.properties
+++ b/src/main/resources/rheem-graphchi-defaults.properties
@@ -8,7 +8,7 @@ rheem.graphchi.pagerank.load.main.template = {\
  "type":"mathex",\
  "in":1,\
  "out":1,\
- "cpu":"?*in0 + ?*out0 + ?}",\
+ "cpu":"?*in0 + ?*out0 + ?",\
  "ram":"0",\
  "disk":"0",\
  "net":"0",\
