--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>rheem-platforms</artifactId>
-        <groupId>io.rheem.rheem</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>rheem-graphchi_2.11</artifactId>
+    <groupId>io.rheem.rheem</groupId>
+    <version>1.0.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <encoding>UTF-8</encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <scala.version>2.11.8</scala.version>
+        <scala.compat.version>2.11</scala.compat.version>
+        <graphchi.version>0.2.2</graphchi.version>
+        <hadoop.version>2.6.0</hadoop.version>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.graphchi</groupId>
             <artifactId>graphchi-java_${scala.compat.version}</artifactId>
+            <version>${graphchi.version}</version>
         </dependency>
 
         <dependency>
@@ -33,10 +42,12 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
+            <version>${hadoop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
+            <version>${hadoop.version}</version>
         </dependency>
     </dependencies>
 
